<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".moduleone.countingexercises.completethelist.CompleteTheListFragment">

    <TextView
        android:id="@+id/txt_complete_the_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/txt_complete_the_list"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_first_list_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_first_list_number"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/one"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edt_second_list_number"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_number_type"
        android:inputType="number"
        android:nextFocusDown="@id/edt_fourth_list_number" />

    <TextView
        android:id="@+id/txt_third_list_number"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/three"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edt_fourth_list_number"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_number_type"
        android:inputType="number"
        android:nextFocusDown="@id/txt_fifth_list_number" />

    <TextView
        android:id="@+id/txt_fifth_list_number"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/five"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edt_sixth_list_number"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_number_type"
        android:inputType="number"
        android:nextFocusDown="@id/edt_eighth_list_number" />

    <TextView
        android:id="@+id/txt_seventh_list_number"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/seven"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edt_eighth_list_number"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_number_type"
        android:inputType="number"
        android:nextFocusDown="@id/btn_complete_the_list_submit" />

    <TextView
        android:id="@+id/txt_ninth_list_number"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/nine"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_tenth_list_number"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/ten"
        android:textSize="16sp" />

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:constraint_referenced_ids="txt_first_list_number,edt_second_list_number,txt_third_list_number,edt_fourth_list_number,txt_fifth_list_number,edt_sixth_list_number,txt_seventh_list_number,edt_eighth_list_number,txt_ninth_list_number,txt_tenth_list_number"
        app:flow_horizontalGap="10dp"
        app:flow_horizontalStyle="spread_inside"
        app:flow_wrapMode="aligned"
        app:layout_constraintBottom_toTopOf="@+id/btn_complete_the_list_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_complete_the_list" />

    <Button
        android:id="@+id/btn_complete_the_list_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/submit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>